fix white gaps

--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ main column start
     object-fit: cover;
     width: 100%;
     height: 100%;
-    margin-top: -4px;
+    margin-top: -8px;
 }
 
 .main-desktop-img {
@@ -520,7 +520,7 @@ section cherry and orange (naartjie?) fruit start
 .naartjie {
     position: relative;
     margin: 0 auto;
-    margin-top: -4px;
+    margin-top: -8px;
 }
 
 .desktop-naartjie-img {
